<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textKota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:text="@string/name"/>
    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:text="@string/temperature"/>
    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingBottom="@dimen/vertical_margin"
        android:text="@string/description"/>
</LinearLayout>